# cpp_github_actions

./: README.md  test.drawio
.github/workflows/: ci.yaml
docker/: Dockerfile
test/: CMakeLists.txt
